<resources>
    <string name="app_name">Twitch Clips Finder</string>

    <string name="startDate">Start date</string>
    <string name="timeInterval">Time interval</string>
    <string name="search">Search!</string>

    <string name="openInTwitch">Open the clip in Twitch</string>

    <string name="sampleClipTitle">Sample clip title</string>
    <string name="sampleClipViews">100,000 views</string>
    <string name="sampleClipBroadcasterName">Sample broadcaster name</string>
</resources>