<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/mainActivityLayout">

    <AutoCompleteTextView
        android:id="@+id/categorySearch"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:theme="@style/Autocomplete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/streamerSearch"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="56dp"
        android:theme="@style/Autocomplete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="300dp"
        android:layout_height="85dp"
        android:layout_marginTop="-4dp"
        android:layout_marginEnd="-18dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/streamerSearch" />

    <TextView
        android:id="@+id/startDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/startDate"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/streamerSearch" />

    <TextView
        android:id="@+id/timeInterval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/timeInterval"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePicker" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePicker">

        <RadioButton
            android:id="@+id/datePicker_none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="None"
            android:buttonTint="@color/blue"/>

        <RadioButton
            android:id="@+id/datePicker_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Day"
            android:buttonTint="@color/blue"/>

        <RadioButton
            android:id="@+id/datePicker_week"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Week"
            android:buttonTint="@color/blue"/>

        <RadioButton
            android:id="@+id/datePicker_month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Month"
            android:buttonTint="@color/blue"/>
    </RadioGroup>

    <Button
        android:id="@+id/searchButton"
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/light_blue"
        android:text="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="415dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchButton">

        <LinearLayout
            android:id="@+id/clipsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>